# axum-starter

./: .env  Cargo.toml  Makefile  README.md  axum_starter.paw
app_macro/: Cargo.toml
app_macro/src/: lib.rs
migrations/: 20210815_all.sql
src/: lib.rs  main.rs
src/api/: mod.rs
src/api/v1/: auth.rs  mod.rs  post.rs  user.rs
src/entity/: mod.rs  post_has_tags.rs  posts.rs  prelude.rs  tags.rs  users.rs
src/layer/: mod.rs  restrict.rs  restricted.rs
src/lib/: jwt.rs  mod.rs  restrict.rs
src/middleware/: jwt.rs  mod.rs
src/repository/: mod.rs  user.rs
src/repository/dao/: mod.rs  post.rs  user.rs
src/repository/dto/: mod.rs  post.rs  user.rs
src/repository/vo/: post.rs  user.rs
src/util/: api_error.rs  error.rs  handle_error.rs  jwt.rs  mod.rs  restrict.rs  serde_format.rs  todo.rs
