[package]
name = "app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app_macro = {path = "app_macro"}
async-trait = "0.1.51"
axum = "0.4.5"
axum-macros = "0.1.0"
bcrypt = "0.10.1"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "7.2.0"
once_cell = "1.9.0"
rbson = "2.0"
regex = "1.5"
rbatis = { version = "3.0.31", default-features = false, features = ["mysql", "runtime-async-std-rustls"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = { version = "1.0.67", features = ["preserve_order"]}
thiserror = "1.0.28"
tokio = { version = "1.10.1", features = ["full"] }
tower = { version = "0.4.11", features = ["full"] }
tower-http = { version = "0.2.0", features = ["trace", "auth", "compression-gzip"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
tracing-appender = "0.1.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
validator = { version = "0.14.0", features = ["derive"] }
futures = "0.3.17"
