[package]
name = "app_macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro=true

[dependencies.quote]
version = "1.0"

[dependencies.syn]
version = "1.0"
features = ["full"]

[dependencies]
async-trait = "0.1.51"
rbatis = {version = "2.0.24", default-features = false, features = ["mysql", "tokio1", "debug_mode"]}
serde = {version = "1.0.130"}